tests/typechecking/valid/let x = let y in.ml
let x = let y = 1 + 2 in
y in 
print_int 1 
