tests/typechecking/invalid/undefined string type.ml
let str = "1234"
in str= "2" + str
